--- a/client/src/css/AdminHome.css
+++ b/client/src/css/AdminHome.css
@@ -2,3 +2,18 @@
     margin-top: 100px;
     text-align: center;
 }
+.logout-button {
+    margin-top: 20px;
+    padding: 10px 15px;
+    background-color: #b40606; /* Màu đỏ */
+    color: white;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 630px;
+}
+
+.logout-button:hover {
+    background-color: #d32f2f; /* Đậm hơn khi hover */
+}
