--- a/client/src/css/AdminLogin.css
+++ b/client/src/css/AdminLogin.css
@@ -1,11 +1,12 @@
-.Register-container {
+.login-container {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #b40606;
 }
 
-.Register-box {
+.login-box {
     background: white;
     padding: 40px 20px;
     width: 350px;
@@ -14,13 +15,13 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.Register-box h2 {
+.login-box h2 {
     margin-bottom: 20px;
     font-size: 24px;
     font-weight: bold;
 }
 
-.Register-box input {
+.login-box input {
     width: 320px;
     padding: 10px;
     margin: 10px 0;
@@ -29,7 +30,7 @@
     font-size: 16px;
 }
 
-.Register-box button {
+.login-box button {
     width: 100%;
     padding: 10px;
     margin: 20px 0;
@@ -42,28 +43,24 @@
     transition: background 0.3s;
 }
 
-.Register-box button:hover {
+.login-box button:hover {
     background: linear-gradient(135deg, #b40606, #8e44ad);
 }
 
-.Register-box p {
+.login-box p {
     font-size: 14px;
 }
 
-.Register-box a {
+.login-box a {
     color: #8e44ad;
     text-decoration: none;
 }
 
-.Register-box a:hover {
+.login-box a:hover {
     text-decoration: underline;
 }
 
-.message {
-    margin: 10px 0;
-    padding: 10px;
-    background-color: #d4edda; /* Màu nền xanh nhạt */
-    color: #155724; /* Màu chữ xanh đậm */
-    border: 1px solid #c3e6cb; /* Đường viền xanh nhạt */
-    border-radius: 5px;
+.error {
+    color: red;
+    margin-top: 10px;
 }
