--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,8 +1,12 @@
-.thumbnail {
+.home-thumbnail {
     align-items: center;
     display: flex;
-    width: 1000px;
-    height: auto;
-    padding-left: 250px;
-    padding-top: 10px;
+    justify-content: center; /* Căn giữa hình ảnh */
+    padding: 10px 0; /* Thêm khoảng cách trên và dưới */
+}
+
+.home-h1 {
+    text-align: center;
+    color: #b40606; /* Màu chữ đồng bộ với header */
+    margin: 20px 0; /* Thêm khoảng cách trên và dưới tiêu đề */
 }
